# LibretApp

./: Contextop.md  find_broken_part_of.ps1  find_missing_class.ps1  scan_undocumented.ps1
libretapp/: BARREL_FILE_GUIDE.md  IMPLEMENTATION_SUMMARY.md  PROJECT_SETUP_GUIDE.md  README.md  REFACTORING_COMPLETE.md  REFACTORING_SUMMARY.md  TODO.md  analysis_options.yaml  build_log.txt  l10n.yaml  pubspec.yaml
libretapp/android/: build.gradle.kts  settings.gradle.kts
libretapp/android/app/: build.gradle.kts
libretapp/android/app/src/main/cpp/: CMakeLists.txt
libretapp/docs/: ARQUITECTURA.md
libretapp/ios/: NATIVE_CORE_SETUP.md
libretapp/ios/Runner/: Info.plist
libretapp/ios/Runner.xcodeproj/: project.pbxproj
libretapp/lib/: main.dart
libretapp/lib/app/: app.dart  app_bloc.dart  app_event.dart  app_index.dart  app_router.dart  app_shell.dart  app_state.dart
libretapp/lib/app/theme/: index.dart  theme_bloc.dart  theme_event.dart  theme_state.dart
libretapp/lib/app/widgets/: app_bottom_nav_bar.dart  app_shell_fab.dart  shell_chrome.dart  shell_fab.dart  shell_insets.dart  widgets.dart
libretapp/lib/core/: core.dart
libretapp/lib/l10n/: app_en.arb  app_es.arb  app_localizations.dart  app_localizations_en.dart  app_localizations_es.dart
libretapp/lib/theme/: app_theme.dart  theme.dart
libretapp/native/libret_core/: CMakeLists.txt  README.md
libretapp/native/libret_core/include/: libret_secure_api.h
libretapp/native/libret_core/src/: libret_secure_api.cc
libretapp/test/: widget_test.dart
libretapp/web/: index.html  manifest.json
(+401 files in other folders)
